# eight_queens_puzzle

./: Makefile  README.md  dune-project
src/: board.ml  dune  eight_queens.ml
