(lang dune 2.7)
(name eight_queens)
(version "0.2.1")

(generate_opam_files false)

(source (github erebuxy/8_queens_quzzle))
(license MIT)
(authors "Boning <erebuxy@gmail.com>")
(maintainers "Boning <erebuxy@gmail.com>")
(documentation "https://github.com/erebuxy/8_queens_quzzle")

(package
 (name eight_queens)
 (synopsis "8 queens puzzle"))

